--- a/template/template.css
+++ b/template/template.css
@@ -14,10 +14,22 @@ a {
 address {
   font-style: normal;
 }
-h1,
-h2,
-h3 {
+header[role="banner"] h1,
+header[role="banner"] h2,
+header[role="banner"] h3,
+main[property="articleBody"] h1,
+main[property="articleBody"] h2,
+main[property="articleBody"] h3 {
   margin: 0;
+}
+main[property="articleBody"] h1,
+main[property="articleBody"] h2,
+main[property="articleBody"] h3,
+main[property="articleBody"] p {
+    line-height: 1.35;
+}
+main[property="articleBody"] > article *:not(header>h3) {
+    font-size: 1.7rem;
 }
 pre,
 code,
@@ -43,7 +55,7 @@ b {
   body > header {
     grid-template-columns: auto 1fr auto;
   }
-  main {
+  main[property="articleBody"] {
     align-content: flex-start;
     display: flex;
     flex-direction: column;
@@ -57,11 +69,11 @@ b {
     flex-basis: 100%;
     width: 0.5rem;
   }
-  main > * {
+  main[property="articleBody"] > * {
     flex-grow: 1;
-    margin: 0.5rem;
-    max-width: 30rem;
-    min-width: 22.5rem;
+    margin: 1rem;
+    max-width: 45rem;
+    min-width: 38.5rem;
     width: 24%;
     width: calc(100% / 4 - 1rem);
   }
@@ -88,7 +100,7 @@ body {
   height: 100%;
   width: 100%;
 }
-body {
+body[typeof="ScholarlyArticle"] {
   font-family: 'Fira Sans Condensed', 'Fira Sans', sans-serif;
   margin: 0;
 }
@@ -105,18 +117,19 @@ body > footer {
 body > header {
   font-size: 80%;
 }
-body > header img {
+body > header[role="banner"] img {
   max-height: 5rem;
 }
-body > header h1 {
-  font-size: 1.5rem;
+body > header[role="banner"] h1 {
+  font-size: 2.5rem;
   font-weight: 600;
 }
-body > header h2 {
-  font-size: 1.15rem;
+body > header[role="banner"] h2 {
+  font-size: 1.9rem;
   font-weight: 500;
 }
-body > header address {
+body > header[role="banner"] address {
+  font-size: 1.4rem;
   margin-bottom: 0.25rem;
   margin-top: 0.75rem;
 }
@@ -160,13 +173,13 @@ main figure figcaption {
   display: block;
   margin-top: 0.5rem;
 }
-article {
+main > article {
   background: #eeeeec;
   display: flex;
   flex-direction: column;
   hyphens: auto;
   line-height: 1.35;
-  padding: 0 0.5rem 0.5rem 0.5rem;
+  padding: 0 0.75rem 0.75rem 0.75rem;
 }
 article p,
 article ul,
@@ -203,11 +216,12 @@ article > .MathJax_MathML {
 article > header {
   background: #2e3436;
   color: #fcaf3e;
-  margin: 0 -0.5rem auto -0.5rem;
-  padding: 0.25rem 0.5rem;
+  margin: 0 -0.75rem auto -0.75rem;
+  padding: 0.5rem 0.75rem;
 }
 article > header > h3 {
-  font-weight: 500;
+  font-size: 2.25rem;
+  font-weight: 501;
 }
 article pre {
   overflow-x: auto;
