--- a/template/template.html
+++ b/template/template.html
@@ -1,153 +1,131 @@
 <!DOCTYPE html>
-
-<html$if(lang)$ lang="$lang$" xml:lang="$lang$"$endif$$if(dir)$ dir="$dir$"$endif$>
-
-    <head>
-    <meta charset="utf-8">
-
-    <title>$title$</title>
-
-    $for(header-includes)$
-    $header-includes$
-    $endfor$
-
-    <link rel="stylesheet" href="template/template.css" />
-    $for(css)$
-    <link rel="stylesheet" href="$css$" type="text/css" />
-    $endfor$
-    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
-    <!-- Based on a poster template from https://github.com/cpitclaudel/academic-poster-template -->
-
-          <!--<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>-->
-    
-          <!--<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&amp;family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">-->
-    
-    <style type="text/css">
-     html { font-size: 1.15rem; }
-     code{white-space: pre-wrap;}
-     span.smallcaps{font-variant: small-caps;}
-     span.underline{text-decoration: underline;}
-     div.column{display: inline-block; vertical-align: top; width: 50%;}
-     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-     ul.task-list{list-style: none;}
-     $if(quotes)$
-     q { quotes: "“" "”" "‘" "’"; }
-     $endif$
-     $if(displaymath-css)$
-     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
-     $endif$
-    </style>
-
-    $if(highlightjs)$
-    <style type="text/css">code{white-space: pre;}</style>
-    <script type="text/javascript">
-     if (window.hljs) {
-         hljs.configure({languages: []});
-         hljs.initHighlightingOnLoad();
-         if (document.readyState && document.readyState === "complete") {
-             window.setTimeout(function() { hljs.initHighlighting(); }, 0);
-         }
-     }
-    </script>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="$lang$" xml:lang="$lang$"$if(dir)$ dir="$dir$"$endif$>
+<head>
+  <meta charset="utf-8" />
+  <meta name="generator" content="pandoc" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+  <!-- Based on a poster template from https://github.com/cpitclaudel/academic-poster-template -->
+$for(author-meta)$
+  <meta name="author" content="$author-meta$" />
+$endfor$
+$if(date-meta)$
+  <meta name="dcterms.date" content="$date-meta$" />
+$endif$
+$if(keywords)$
+  <meta name="keywords" content="$for(keywords)$$keywords$$sep$, $endfor$" />
+$endif$
+$if(description-meta)$
+  <meta name="description" content="$description-meta$" />
+$endif$
+  <title>$if(title-prefix)$$title-prefix$ – $endif$$pagetitle$</title>
+  <!-- <style>
+       $styles.html$
+       </style> -->
+  <link rel="stylesheet" href="template/template.css" />
+  <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&amp;family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
+<style type="text/css">
+html { font-size: 1.15rem; }
+</style>
+$for(css)$
+  <link rel="stylesheet" href="$css$" />
+$endfor$
+$for(header-includes)$
+  $header-includes$
+$endfor$
+$if(math)$
+  $math$
+$endif$
+  <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
+  <![endif]-->
+</head>
+<body vocab="http://schema.org/" typeof="ScholarlyArticle">
+$for(include-before)$
+$include-before$
+$endfor$
+<header role="banner">
+    $if(logo.left)$
+    <aside id="logo-left">
+        $if(logo.left.url)$<a href="$logo.left.url$">$endif$
+        <img src="$logo.left.src$" alt="$logo.left.alt$">
+        $if(logo.left.url)$</a>$endif$
+    </aside>
     $endif$
-
-    $if(highlight-downlit)$
-    <style type="text/css">
-     /* from bookdown::bs4_book() css */
-     code a:any-link {
-         color: inherit; /* use colour from syntax highlighting */
-         text-decoration: underline;
-         text-decoration-color: #ccc;
-     }
-    </style>
-    $endif$
-
-    </head>
-
-  <body vocab="http://schema.org/" typeof="ScholarlyArticle">
-      <header role="banner">
-      $if(logo.left)$
-      <aside id="logo-left">
-          $if(logo.left.url)$<a href="$logo.left.url$">$endif$
-          <img src="$logo.left.src$" alt="$logo.left.alt$">
-          $if(logo.left.url)$</a>$endif$
-      </aside>
-      $endif$
-      <div>
-          <h1 property="headline">$title$</h1>
-          <h2 property="alternativeHeadline">$subtitle$</h2>
-          <address>
-              <a property="author">
-                        $if(author.name)$
-                        $author.name$
-                        $if(author.affiliation)$
-                        <br />
-                        $author.affiliation$
-                        $endif$
-                        $else$
-                        $author$
-                        $endif$
-                    </a>
+    <div>
+        <h1 property="headline">$title$</h1>
+        <h2 property="alternativeHeadline">$subtitle$</h2>
+        <address>
+            <span property="author">
+                $if(author.name)$
+                $author.name$
+                $if(author.affiliation)$
+                <br />
+                $author.affiliation$
+                $endif$
+                $else$
+                $author$
+                $endif$
+            </span>
         </address>
         <span class="publication-info">
             <span property="publisher">Unpublished</span>,
             $if(date)$
-              <time pubdate property="datePublished" datetime="$date-meta$">
-              $date$
-              </time>
+            <time pubdate property="datePublished" datetime="$date-meta$">
+                $date$
+            </time>
             $endif$
         </span>
-      </div>
-      $if(logo.right)$
-      <aside id="logo-right">
-          $if(logo.right.url)$<a href="$logo.right.url$">$endif$
-          <img src="$logo.right.src$" alt="$logo.right.alt$">
-          $if(logo.right.url)$</a>$endif$
-      </aside>
-      $endif$
-    </header>
+    </div>
+    $if(logo.right)$
+    <aside id="logo-right">
+        $if(logo.right.url)$<a href="$logo.right.url$">$endif$
+        <img src="$logo.right.src$" alt="$logo.right.alt$">
+        $if(logo.right.url)$</a>$endif$
+    </aside>
+    $endif$
+</header>
+$body$
+<main property="articleBody">
+</main>
+<footer justify-content="center">
+    $if(author.email)$
+    <div>
+        <a class="author_email" href="mailto:#">$author.email$</a>
+    </div>
+    $endif$
+    <span class="credits">
+    </span>
+</footer>
+<script type="text/javascript">
+ var articleBody = document.body.getElementsByTagName("main")[0];
+ var sections = Array.from(document.body.getElementsByClassName("section level1"));
+ // console.log(sections)
+ for (var i = 0; i < sections.length; i++) {
+     var article = document.createElement("article");
+     var header = document.createElement("header");
+     var h3 = document.createElement("h3");
 
-    <main property="articleBody">
-        $body$
-    </main>
-
-    <footer justify-content="center">
-        $if(author.email)$
-        <div>
-            <a class="author_email" href="mailto:#">$author.email$</a>
-        </div>
-        $endif$
-<span class="credits">
-</span>
-    </footer>
-
-    <script type="text/javascript">
-     var articleBody = document.body.getElementsByTagName("main")[0];
-     var sections = Array.from(articleBody.getElementsByClassName("section level1"));
-     // console.log(sections)
-     for (var i = 0; i < sections.length; i++) {
-         var article = document.createElement("article");
-         var header = document.createElement("header");
-         var h3 = document.createElement("h3");
-
-         // move h1 content into the h3
-         var h1 = sections[i].getElementsByTagName("h1")[0];
-         while (h1.firstChild) {
-             h3.append(h1.removeChild(h1.firstChild));
-         }
-         h1.remove();
-         header.append(h3);
-         article.append(header);
-
-         // move remaining content into the article
-         while (sections[i].firstChild) {
-             // console.log(sections[i].firstChild);
-             article.lastChild.after(sections[i].removeChild(sections[i].firstChild));
-         }
-         sections[i].remove();
-         articleBody.append(article);
+     // move h1 content into the h3
+     var h1 = sections[i].getElementsByTagName("h1")[0];
+     while (h1.firstChild) {
+         h3.append(h1.removeChild(h1.firstChild));
      }
-    </script>
+     h1.remove();
+     header.append(h3);
+     article.append(header);
 
-  </body>
+     // move remaining content into the article
+     while (sections[i].firstChild) {
+         // console.log(sections[i].firstChild);
+         article.lastChild.after(sections[i].removeChild(sections[i].firstChild));
+     }
+     sections[i].remove();
+     articleBody.append(article);
+ }
+</script>
+$for(include-after)$
+$include-after$
+$endfor$
+</body>
 </html>
