--- a/template/template.html
+++ b/template/template.html
@@ -96,6 +96,9 @@ $body$
     $endif$
     <span class="credits">
     </span>
+    $if(posterlink)$
+    | Live version of this poster at <a href="$posterlink$">$posterlink$</a>
+    $endif$
 </footer>
 <script type="text/javascript">
  var articleBody = document.body.getElementsByTagName("main")[0];
